# pancake-judge

./: Cargo.toml  Makefile  README.md  example.env
judge/: Cargo.toml
judge-db/: Cargo.toml
judge-db/migrations/: 20241027142902_create_users_table.sql
judge-db/src/: lib.rs  users.rs
judge-db/tests/: test_users.rs
judge/src/: build_config.rs  lib.rs  main.rs
judge/src/api/: mod.rs
