[package]
name = "judge-db"
version = "0.1.0"
edition = "2021"

[features]
use_postgres = []

[dependencies]
chrono = { version = "0.4.38", default-features = false }
sqlx = { version = "0.8.2", features = ["sqlite", "postgres", "runtime-tokio", "chrono"] }
thiserror = "1.0.65"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "rt", "net"] }
