[package]
name = "judge"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.17", default-features = false, features = ["derive", "std", "help", "usage"] }
dotenvy = "0.15.7"
env_logger = { version = "0.11.3", default-features = false }
log = "0.4.22"

judge-db = { path = "../judge-db" }
thiserror = "1.0.65"
